Fix build script for Render production deployment

--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-        "build": "cd client && npm install && npm run build && cd ../server && npm install && npx prisma generate",
-        "start": "cd server && npm start",
-        "render-postbuild": "cd server && npx prisma migrate deploy"
+        "build": "cd client && npm install --include=dev && npm run build && cd ../server && npm install --include=dev && npx prisma generate && npx prisma migrate deploy",
+        "start": "cd server && npm start"
     }
 }
